Pin packaging version

--- a/renovate.json
+++ b/renovate.json
@@ -27,6 +27,9 @@
     }, {
       "matchPackageNames": ["httpcore"],
       "allowedVersions": "<0.18.0"
+    }, {
+      "matchPackageNames": ["packaging"],
+      "allowedVersions": "<23.0.1"
     }
   ],
   "regexManagers": [
