Kill DB process (PostgreSQL), full cluster restart and full cluster crash tests (#136)
* Enable sync mode

* Remove custom conf

* Add new expected k8s endpoint to helper function

* Fix TLS test

* Add pebble health check

* Fix freeze db test

* Enable restart db test

* Remove commented code

* Fix unit tests

* Add missing tests

* Improve TLS management

* Add health check update

* Remove health check

* Add health check

* Prevent multiple primaries

* Remove unused code

* Check max number written

* Check writes on all instances

* Remove master_start_timeout setting

* Improve logs retrieval

* Add CA chain to trusted certificates

* Revert "Remove master_start_timeout setting"

This reverts commit 84d810d13eaedb5dc22e0cd2bc8faf6489dd0484.

* Use the right PG process in the HA tests

* Fix order in test

* Remove unused call to SIGCONT

* Enable restart DB test

* Add initial full cluster crash test

* Add remaining cluster restart and crash tests

* Kill right process

* Create helper function for duplicate code

* Add telemetry step

* Increase replan timeout

* Stabilize tests

* Change tester application connection

* Add timeout to the database operations

* Remove telemetry step

* Add prints

* Add back the last written value file

* Pin packaging version

* Fix PostgreSQL DB process full cluster restart/crash

* Fix helper for freeze DB process test

* Add sleep

* Reduce extended pebble restart delay

* Remove prints

* Remove sleep

* Fix poetry lock

* Separate signal logic

* Improve loop wait setting change

* Change calls order

* Improve description about timeout

* Rename boolean functions according the best practices

---------

Co-authored-by: Dragomir Penev <dragomir.penev@canonical.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ lightkube-models = "1.26.0.4"
 requests = "2.28.2"
 boto3 = "1.26.114"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
+packaging = "23.1"
 
 [tool.poetry.group.format]
 optional = true
