--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,7 +40,10 @@ requires:
   certificates:
     interface: tls-certificates
     limit: 1
-  s3-parameters:
+  backup-s3-parameters:
+    interface: s3
+    limit: 1
+  restore-s3-parameters:
     interface: s3
     limit: 1
 
