Move to a single relation

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,10 +40,7 @@ requires:
   certificates:
     interface: tls-certificates
     limit: 1
-  backup-s3-parameters:
-    interface: s3
-    limit: 1
-  restore-s3-parameters:
+  s3-parameters:
     interface: s3
     limit: 1
 
