--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,13 +1,19 @@
-# Copyright 2021 Canonical Ltd.
+# Copyright 2023 Canonical Ltd.
 # See LICENSE file for licensing details.
 
 name: postgresql-k8s
-display-name: PostgreSQL K8s
+display-name: Charmed PostgreSQL K8s
+summary: Charmed PostgreSQL K8s operator
 description: |
   Charm to operate the PostgreSQL database on Kubernetes clusters
 docs: https://discourse.charmhub.io/t/charmed-postgresql-k8s-documenation/9307
-summary: |
-  Charm to operate the PostgreSQL database on Kubernetes clusters
+source: https://github.com/canonical/postgresql-k8s-operator
+issues: https://github.com/canonical/postgresql-k8s-operator/issues
+website:
+  - https://ubuntu.com/data/postgresql
+  - https://charmhub.io/postgresql-k8s
+  - https://github.com/canonical/postgresql-k8s-operator
+  - https://chat.charmhub.io/charmhub/channels/data-platform
 
 containers:
   postgresql:
@@ -40,11 +46,17 @@ requires:
   certificates:
     interface: tls-certificates
     limit: 1
+    optional: true
   s3-parameters:
     interface: s3
     limit: 1
+    optional: true
 
 storage:
   pgdata:
     type: filesystem
     location: /var/lib/postgresql/data
+    description: Persistent storage for PostgreSQL data
+
+assumes:
+  - k8s-api
