--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,25 +69,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tox-environments:
-          - password-rotation-integration
-          - tls-integration
-        agents-version: ["2.9.42"]  # renovate: latest
+#         tox-environments:
+#           - password-rotation-integration
+#           - tls-integration
+#         agents-version: ["2.9.42"]  # renovate: latest
         include:
-          - tox-environments: backup-integration
-            agents-version: "2.9.29"
+#           - tox-environments: backup-integration
+#             agents-version: "2.9.29"
           - tox-environments: charm-integration
             agents-version: "2.9.29"
-          - tox-environments: database-relation-integration
-            agents-version: "2.9.29"
-          - tox-environments: db-relation-integration
-            agents-version: "2.9.29"
-          - tox-environments: db-admin-relation-integration
-            agents-version: "2.9.29"
-          - tox-environments: ha-replication-integration
-            agents-version: "2.9.29"
-          - tox-environments: ha-self-healing-integration
-            agents-version: "2.9.29"
+#           - tox-environments: database-relation-integration
+#             agents-version: "2.9.29"
+#           - tox-environments: db-relation-integration
+#             agents-version: "2.9.29"
+#           - tox-environments: db-admin-relation-integration
+#             agents-version: "2.9.29"
+#           - tox-environments: ha-replication-integration
+#             agents-version: "2.9.29"
+#           - tox-environments: ha-self-healing-integration
+#             agents-version: "2.9.29"
     name: ${{ matrix.tox-environments }} | ${{ matrix.agents-version }}
     needs:
       - lib-check
@@ -121,10 +121,12 @@ jobs:
             echo "mark_expression=not unstable" >> $GITHUB_OUTPUT
           fi
       - name: Run integration tests
-        run: tox run -e ${{ matrix.tox-environments }} -- -m '${{ steps.select-tests.outputs.mark_expression }}'
+        run: tox run -e ${{ matrix.tox-environments }} -- --keep-models -m '${{ steps.select-tests.outputs.mark_expression }}'
         env:
           AWS_ACCESS_KEY: "${{ secrets.AWS_ACCESS_KEY }}"
           AWS_SECRET_KEY: "${{ secrets.AWS_SECRET_KEY }}"
           GCP_ACCESS_KEY: "${{ secrets.GCP_ACCESS_KEY }}"
           GCP_SECRET_KEY: "${{ secrets.GCP_SECRET_KEY }}"
           CI_PACKED_CHARMS: ${{ needs.build.outputs.charms }}
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
