--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-anyio==3.7.0; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+anyio==3.7.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:275d9973793619a5374e1c89a4f4ad3f4b0a5510a2b5b939444bee8f4c4d37ce \
     --hash=sha256:eddca883c4175f14df8aedce21054bfca3adb70ffe76a9f607aef9d7fa2ea7f0
 attrs==23.1.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:1f28b4522cdc2fb4256ac1a020c78acf9cba2c6b461ccd2c126f3aa8e8335d04 \
     --hash=sha256:6279836d581513a26f1bf235f9acd333bc9115683f14f7e8fae46c98fc50e015
-boto3==1.26.142; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+boto3==1.26.142 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:8b8ccbb42e5c4008086a187afee98f4a10d5d985892699b9e2f1e6c5b18a7754 \
     --hash=sha256:8f4b5c93a7f0c8e40ae1983cfbefd017bd625e554426544c78dceb4045648911
-botocore==1.29.142; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+botocore==1.29.142 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:0677848bb8ef94d69c5d2f5c613dbab5b6710a8b7649f3fafca5172c464728b8 \
     --hash=sha256:512d2f48fc1471f169bc210eede662f8da66be3cebc1515dfb5411a18b2aeabf
 certifi==2023.5.7 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
@@ -174,13 +174,16 @@ cryptography==40.0.2 ; python_full_version >= "3.10.6" and python_full_version <
     --hash=sha256:c33c0d32b8594fa647d2e01dbccc303478e16fdd7cf98652d5b3ed11aa5e5c99 \
     --hash=sha256:cbaba590180cba88cb99a5f76f90808a624f18b169b90a4abb40c1fd8c19420e \
     --hash=sha256:d5a1bd0e9e2031465761dfa920c16b0065ad77321d8a8c1f5ee331021fda65e9
+exceptiongroup==1.1.1 ; python_full_version >= "3.10.6" and python_version < "3.11" \
+    --hash=sha256:232c37c63e4f682982c8b6459f33a8981039e5fb8756b2074364e5055c498c9e \
+    --hash=sha256:d484c3090ba2889ae2928419117447a14daf3c1231d5e30d0aae34f354f01785
 h11==0.14.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:8f19fbbe99e72420ff35c00b27a34cb9937e902a8b810e2c88300c6f0a3b699d \
     --hash=sha256:e3fe4ac4b851c468cc8363d500db52c2ead036020723024a109d37346efaa761
-httpcore==0.17.2; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+httpcore==0.17.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:125f8375ab60036db632f34f4b627a9ad085048eef7cb7d2616fea0f739f98af \
     --hash=sha256:5581b9c12379c4288fe70f43c710d16060c10080617001e6b22a3b6dbcbefd36
-httpx==0.24.1; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+httpx==0.24.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:06781eb9ac53cde990577af654bd990a4949de37a28bdb4a230d434f3a30b9bd \
     --hash=sha256:5853a43053df830c20f8110c5e69fe44d035d850b2dfe795e196f00fdb774bdd
 idna==3.4 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
@@ -336,7 +339,7 @@ pyyaml==6.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" 
     --hash=sha256:dbad0e9d368bb989f4515da330b88a057617d16b6a8245084f1b05400f24609f \
     --hash=sha256:e61ceaab6f49fb8bdfaa0f92c4b57bcfbea54c09277b1b4f7ac376bfb7a7c174 \
     --hash=sha256:f84fbc98b019fef2ee9a1cb3ce93e3187a6df0b2538a651bfb890254ba9f90b5
-requests==2.31.0; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+requests==2.31.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:58cd2187c01e70e6e26505bca751777aa9f2ee0b7f4300988b709f44e013003f \
     --hash=sha256:942c5a758f98d790eaed1a29cb6eefc7ffb0d1cf7af05c3d2791656dbd6ad1e1
 s3transfer==0.6.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
@@ -351,9 +354,9 @@ sniffio==1.3.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.
 tenacity==8.2.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:2f277afb21b851637e8f52e6a613ff08734c347dc19ade928e519d7d2d8569b0 \
     --hash=sha256:43af037822bd0029025877f3b2d97cc4d7bb0c2991000a3d59d71517c5c969e0
-urllib3==1.26.16; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+urllib3==1.26.16 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:8d36afa7616d8ab714608411b4a3b13e58f463aee519024578e062e141dce20f \
     --hash=sha256:8f135f6502756bde6b2a9b28989df5fbe87c9970cecaa69041edcce7f0589b14
-websocket-client==1.5.2; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+websocket-client==1.5.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:c7d67c13b928645f259d9b847ab5b57fd2d127213ca41ebd880de1f553b7c23b \
     --hash=sha256:f8c64e28cd700e7ba1f04350d66422b6833b82a796b525a51e740b8cc8dab4b1
