--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,13 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'tests/**'
+      - 'docs/**'
+      - renovate.json
+      - poetry.lock
+      - pyproject.toml
+      - '.github/**.md'
 
 jobs:
   ci-tests:
