--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,6 +68,7 @@ jobs:
   integration-test:
     strategy:
       fail-fast: false
+      max-parallel: 6
       matrix:
         tox-environments:
           - backup-integration
@@ -80,8 +81,10 @@ jobs:
           - password-rotation-integration
           - plugins-integration
           - tls-integration
-        agents-version: ["2.9.43"]  # renovate: latest
-    name: ${{ matrix.tox-environments }} | ${{ matrix.agents-version }}
+        agent-versions:
+          - "2.9.43"  # renovate: latest juju 2
+          - "3.1.5"  # renovate: latest juju 3
+    name: ${{ matrix.tox-environments }} | ${{ matrix.agent-versions }}
     needs:
       - lib-check
       - lint
@@ -92,12 +95,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set channel
+        run: |
+          juju_channel=$(echo "${{ matrix.agent-versions }}" | cut -c 1-3)
+          echo "channel=${juju_channel}/stable" >> "$GITHUB_ENV"
+          juju_major=$(echo "${{ matrix.agent-versions }}" | cut -c 1)
+          echo "libjuju=juju${juju_major}" >> "$GITHUB_ENV"
       - name: Setup operator environment
         # TODO: Replace with custom image on self-hosted runner
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
-          bootstrap-options: "--agent-version ${{ matrix.agents-version }}"
+          channel: "1.27-strict/stable"
+          bootstrap-options: "--agent-version ${{ matrix.agent-versions }}"
+          juju-channel: "${{ env.channel }}"
       - name: Download packed charm(s)
         uses: actions/download-artifact@v3
         with:
@@ -114,7 +125,7 @@ jobs:
             echo "mark_expression=not unstable" >> $GITHUB_OUTPUT
           fi
       - name: Run integration tests
-        run: tox run -e ${{ matrix.tox-environments }} -- -m '${{ steps.select-tests.outputs.mark_expression }}'
+        run: tox run -e ${{ matrix.tox-environments }}-${{ env.libjuju }} -- -m '${{ steps.select-tests.outputs.mark_expression }}'
         env:
           AWS_ACCESS_KEY: "${{ secrets.AWS_ACCESS_KEY }}"
           AWS_SECRET_KEY: "${{ secrets.AWS_SECRET_KEY }}"
