--- a/renovate.json
+++ b/renovate.json
@@ -12,18 +12,35 @@
     {
       "matchManagers": ["poetry", "pip_requirements", "regex"],
       "matchDatasources": ["pypi"],
+      "excludePackageNames": ["juju", "libjuju 2", "libjuju 3"],
       "groupName": "Python dependencies"
     }, {
       "matchManagers": ["github-actions"],
       "groupName": "GitHub actions"
     }, {
+      "matchDepNames": ["Juju 3"],
+      "matchPackageNames": ["juju/juju"],
+      "allowedVersions": "<3.2.0",
+      "extractVersion": "^juju-(?<version>.*)$",
+      "groupName": "Juju 3"
+    }, {
+      "matchDepNames": ["Juju 2"],
       "matchPackageNames": ["juju/juju"],
       "allowedVersions": "<3.0.0",
       "extractVersion": "^juju-(?<version>.*)$",
-      "groupName": "Juju agent"
+      "groupName": "Juju 2"
     }, {
+      "matchDepNames": ["libjuju 3"],
       "matchPackageNames": ["juju"],
-      "allowedVersions": "<3.0.0"
+      "matchDatasources": ["pypi"],
+      "allowedVersions": "<3.2.0",
+      "groupName": "Juju 3"
+    }, {
+      "matchDepNames": ["libjuju 2"],
+      "matchPackageNames": ["juju"],
+      "matchDatasources": ["pypi"],
+      "allowedVersions": "<3.0.0",
+      "groupName": "Juju 2"
     }, {
       "matchPackageNames": ["httpcore"],
       "allowedVersions": "<0.18.0"
@@ -38,14 +55,49 @@
   "regexManagers": [
     {
       "fileMatch": ["^(workflow-templates|\\.github/workflows)/[^/]+\\.ya?ml$"],
-      "matchStrings": ["agents-version: \\[\"(?<currentValue>.*?)\"\\] +# renovate: latest"],
-      "depNameTemplate": "juju/juju",
+      "matchStrings": ["- \"(?<currentValue>.*?)\" +# renovate: latest juju 2"],
+      "depNameTemplate": "Juju 2",
+      "packageNameTemplate": "juju/juju",
       "datasourceTemplate": "github-releases",
       "versioningTemplate": "loose",
       "extractVersionTemplate": "Juju release"
     }, {
+      "fileMatch": ["^(workflow-templates|\\.github/workflows)/[^/]+\\.ya?ml$"],
+      "matchStrings": ["- \"(?<currentValue>.*?)\" +# renovate: latest juju 3"],
+      "depNameTemplate": "Juju 3",
+      "packageNameTemplate": "juju/juju",
+      "datasourceTemplate": "github-releases",
+      "versioningTemplate": "loose",
+      "extractVersionTemplate": "Juju release"
+    }, {
+      "fileMatch": [
+        "(^|/)pyproject\\.toml$",
+        "(^|/)tox\\.ini$"
+      ],
+      "matchStrings": [
+        "juju = \".* \\|\\| (?<currentValue>.*?)\" *# renovate libjuju",
+        "LIBJUJU=\"(?<currentValue>.*?)\" *# libjuju3"
+      ],
+      "depNameTemplate": "libjuju 3",
+      "packageNameTemplate": "juju",
+      "datasourceTemplate": "pypi",
+      "versioningTemplate": "loose",
+    }, {
+      "fileMatch": [
+        "(^|/)pyproject\\.toml$",
+        "(^|/)tox\\.ini$"
+      ],
+      "matchStrings": [
+        "juju = \"(?<currentValue>.*?) \\|\\| .*\" *# renovate libjuju",
+        "LIBJUJU=\"(?<currentValue>.*?)\" *# libjuju2"
+      ],
+      "depNameTemplate": "libjuju 2",
+      "packageNameTemplate": "juju",
+      "datasourceTemplate": "pypi",
+      "versioningTemplate": "loose",
+    }, {
       "fileMatch": ["(^|/)([\\w-]*)charmcraft\\.ya?ml$"],
-      "matchStrings": ["- (?<depName>.*?)==(?<currentValue>.*?) +# renovate"],
+      "matchStrings": ["- (?<depName>.*?)(?:\\[.*?\\])?==(?<currentValue>.*?) +# renovate"],
       "datasourceTemplate": "pypi",
       "versioningTemplate": "loose"
     }
