--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,8 @@ peers:
     interface: postgresql_peers
   restart:
     interface: rolling_op
+  upgrade:
+    interface: upgrade
 
 provides:
   database:
