--- a/tox.ini
+++ b/tox.ini
@@ -162,6 +162,16 @@ commands =
     poetry install --with integration
     poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/test_tls.py
 
+[testenv:upgrade-integration]
+description = Run upgrade integration tests
+pass_env =
+    {[testenv]pass_env}
+    CI
+    CI_PACKED_CHARMS
+commands =
+    poetry install --with integration
+    poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/test_upgrade.py
+
 [testenv:integration]
 description = Run all integration tests
 pass_env =
