--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ requests = "2.31.0"
 boto3 = "1.26.157"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
 packaging = "23.1"
+pydantic = "1.10.11"
 
 [tool.poetry.group.format]
 optional = true
