--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ psycopg2 = {version = "2.9.6", extras = ["binary"]}
 optional = true
 
 [tool.poetry.group.integration.dependencies]
-lightkube = "^0.13.0"
+lightkube = "0.13.0"
 pytest = "7.4.0"
 pytest-operator = "0.28.0"
 juju = "2.9.43.0 || 3.1.2.0"  # renovate libjuju
