--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ python = "^3.10.6"
 ops = "2.4.1"
 pgconnstr = "1.0.1"
 tenacity = "8.2.2"
-cryptography = "41.0.1"
+cryptography = "41.0.2"
 jsonschema = "4.18.0"
 jinja2 = "3.1.2"
 lightkube = "0.13.0"
@@ -58,10 +58,10 @@ psycopg2 = {version = "2.9.6", extras = ["binary"]}
 optional = true
 
 [tool.poetry.group.integration.dependencies]
-lightkube = "^0.13.0"
+lightkube = "0.13.0"
 pytest = "7.4.0"
 pytest-operator = "0.28.0"
-juju = "2.9.43.0" # Latest juju 2
+juju = "2.9.43.0 || 3.1.2.0"  # renovate libjuju
 psycopg2 = {version = "2.9.6", extras = ["binary"]}
 
 [tool.poetry.group.ha_charm]
