--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ optional = true
 
 [tool.poetry.group.unit.dependencies]
 coverage = {extras = ["toml"], version = "7.2.7"}
+pydantic= "1.10.12"
 pytest = "7.4.0"
 pytest-asyncio = "0.21.1"
 psycopg2 = {version = "2.9.6", extras = ["binary"]}
@@ -61,7 +62,7 @@ optional = true
 lightkube = "0.14.0"
 pytest = "7.4.0"
 pytest-operator = "0.28.0"
-juju = "2.9.44.0 || 3.1.2.0"  # renovate libjuju
+juju = "2.9.44.0 || 3.2.0.1"  # renovate libjuju
 psycopg2 = {version = "2.9.6", extras = ["binary"]}
 
 [tool.poetry.group.ha_charm]
