--- a/tests/integration/ha_tests/application-charm/requirements.txt
+++ b/tests/integration/ha_tests/application-charm/requirements.txt
@@ -1,7 +1,7 @@
 ops==2.4.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:9cd1a25c6ae30dc9f9afcbe87250f5349ff9a05d5b06632ad8111700c5f0db04 \
     --hash=sha256:b5762bea03049ec150c6266833925d0bb36237b26b006ca878e74e24d162f981
-PyYAML==6.0.1; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+pyyaml==6.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:062582fca9fabdd2c8b54a3ef1c978d786e0f6b3a1510e0ac93ef59e0ddae2bc \
     --hash=sha256:1635fd110e8d85d55237ab316b5b011de701ea0f29d07611174a1b42f1444741 \
     --hash=sha256:184c5108a2aca3c5b3d3bf9395d50893a7ab82a38004c8f61c258d4428e80206 \
