--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,15 @@ anyio==3.7.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
 attrs==23.1.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:1f28b4522cdc2fb4256ac1a020c78acf9cba2c6b461ccd2c126f3aa8e8335d04 \
     --hash=sha256:6279836d581513a26f1bf235f9acd333bc9115683f14f7e8fae46c98fc50e015
-boto3==1.28.7; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+boto3==1.28.7 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:46803b8ae114ff139f2a87fcb5d2f5a5728f6c96fe3a2b9416a8fcbe761423ae \
     --hash=sha256:ef6a465d3b25b89bcd00ff69675b33917166145e544735dcb9978091f5b0b752
-botocore==1.31.7; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
-    --hash=sha256:f211ef5714bec8ae24b3fe737b8689611ef4d0dbea0ab46ef8328e112dd10ada \
-    --hash=sha256:f4473f66c153c262b8262404d737f4249366daf00fb068b495577a24b830ebcb
-certifi==2023.5.7 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
-    --hash=sha256:0f0d56dc5a6ad56fd4ba36484d6cc34451e1c6548c61daad8c320169f91eddc7 \
-    --hash=sha256:c6c2e98f5c7869efca1f8916fed228dd91539f9f1b444c314c06eef02980c716
+botocore==1.31.10 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+    --hash=sha256:736a9412f405d6985570c4a87b533c2396dd8d4042d8c7a0ca14e73d4f1bcf9d \
+    --hash=sha256:a3bfd3627a490faedf37d79373d6957936d7720888ca85466e0471cb921e4557
+certifi==2023.7.22 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+    --hash=sha256:539cc1d13202e33ca466e88b2807e29f4c13049d6d87031a3c110744495cb082 \
+    --hash=sha256:92d6037539857d8206b8f6ae472e8b77db8058fec5937a1ef3f54304089edbb9
 cffi==1.15.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:00a9ed42e88df81ffae7a8ab6d9356b371399b91dbdf0c3cb1e84c03a13aceb5 \
     --hash=sha256:03425bdae262c76aad70202debd780501fabeaca237cdfddc008987c0e0f59ef \
@@ -199,16 +199,16 @@ jinja2==3.1.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0
 jmespath==1.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:02e2e4cc71b5bcab88332eebf907519190dd9e6e82107fa7f83b1003a6252980 \
     --hash=sha256:90261b206d6defd58fdd5e85f478bf633a2901798906be2ad389150c5c60edbe
-jsonschema-specifications==2023.7.1; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+jsonschema-specifications==2023.7.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:05adf340b659828a004220a9613be00fa3f223f2b82002e273dee62fd50524b1 \
     --hash=sha256:c91a50404e88a1f6ba40636778e2ee08f6e24c5613fe4c53ac24578a5a7f72bb
-jsonschema==4.18.4; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+jsonschema==4.18.4 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:971be834317c22daaa9132340a51c01b50910724082c2c1a2ac87eeec153a3fe \
     --hash=sha256:fb3642735399fa958c0d2aad7057901554596c63349f4f6b283c493cf692a25d
 lightkube-models==1.27.1.4 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:206abb6d184a07ed84c20fbabe494847e892de2c38ed302f39a87b4ed1f7bcd9 \
     --hash=sha256:5caa97ed46bde5ae8a4313ebf3fa3d0135388d0aea0752261d4720e24d982fb0
-lightkube==0.14.0; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+lightkube==0.14.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:448926ce667d18f9e07e9a600c7db0d0424447883f1873be31e60d9e86176d71 \
     --hash=sha256:9c0a8e7543debded4494ae42606d73b775561eb0950504bd735f565b25ef8dc2
 markupsafe==2.1.3 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
@@ -277,7 +277,7 @@ pycparser==2.21 ; python_full_version >= "3.10.6" and python_full_version < "4.0
 python-dateutil==2.8.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:0123cacc1627ae19ddf3c27a5de5bd67ee4586fbdd6440d9748f8abb483d3e86 \
     --hash=sha256:961d03dc3453ebbc59dbdea9e4e11c5651520a876d0f4db161e8674aae935da9
-PyYAML==6.0.1; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+pyyaml==6.0.1 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:062582fca9fabdd2c8b54a3ef1c978d786e0f6b3a1510e0ac93ef59e0ddae2bc \
     --hash=sha256:1635fd110e8d85d55237ab316b5b011de701ea0f29d07611174a1b42f1444741 \
     --hash=sha256:184c5108a2aca3c5b3d3bf9395d50893a7ab82a38004c8f61c258d4428e80206 \
@@ -318,13 +318,13 @@ PyYAML==6.0.1; python_full_version >= "3.10.6" and python_full_version < "4.0.0"
     --hash=sha256:fca0e3a251908a499833aa292323f32437106001d436eca0e6e7833256674585 \
     --hash=sha256:fd1592b3fdf65fff2ad0004b5e363300ef59ced41c2e6b3a99d4089fa8c5435d \
     --hash=sha256:fd66fc5d0da6d9815ba2cebeb4205f95818ff4b79c3ebe268e75d961704af52f
-referencing==0.30.0; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+referencing==0.30.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:47237742e990457f7512c7d27486394a9aadaf876cbfaa4be65b27b4f4d47c6b \
     --hash=sha256:c257b08a399b6c2f5a3510a50d28ab5dbc7bbde049bcaf954d43c446f83ab548
 requests==2.31.0 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:58cd2187c01e70e6e26505bca751777aa9f2ee0b7f4300988b709f44e013003f \
     --hash=sha256:942c5a758f98d790eaed1a29cb6eefc7ffb0d1cf7af05c3d2791656dbd6ad1e1
-rpds-py==0.9.2; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
+rpds-py==0.9.2 ; python_full_version >= "3.10.6" and python_full_version < "4.0.0" \
     --hash=sha256:0173c0444bec0a3d7d848eaeca2d8bd32a1b43f3d3fde6617aac3731fa4be05f \
     --hash=sha256:01899794b654e616c8625b194ddd1e5b51ef5b60ed61baa7a2d9c2ad7b2a4238 \
     --hash=sha256:02938432352359805b6da099c9c95c8a0547fe4b274ce8f1a91677401bb9a45f \
