Removed flag from poetry exportD

--- a/tox.ini
+++ b/tox.ini
@@ -189,6 +189,6 @@ commands =
 description = Install, lock and export poetry dependencies
 commands =
     poetry lock
-    poetry export --without-hashes -f requirements.txt -o requirements.txt
-    poetry export --without-hashes --only ha_charm -f requirements.txt -o tests/integration/ha_tests/application-charm/requirements.txt
-    poetry export --without-hashes --only relation_charm -f requirements.txt -o tests/integration/new_relations/application-charm/requirements.txt
+    poetry export -f requirements.txt -o requirements.txt
+    poetry export --only ha_charm -f requirements.txt -o tests/integration/ha_tests/application-charm/requirements.txt
+    poetry export --only relation_charm -f requirements.txt -o tests/integration/new_relations/application-charm/requirements.txt
