--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,7 +15,7 @@ website:
   - https://github.com/canonical/postgresql-k8s-operator
   - https://chat.charmhub.io/charmhub/channels/data-platform
 maintainers:
-  - "Canonical Data Platform <data-platform@lists.launchpad.net>"
+  - Canonical Data Platform <data-platform@lists.launchpad.net>
 
 containers:
   postgresql:
