--- a/renovate.json
+++ b/renovate.json
@@ -51,6 +51,9 @@
       "matchPackageNames": ["urllib3"],
       "allowedVersions": "<2.0.0"
     }, {
+      "matchPackageNames": ["pydantic"],
+      "allowedVersions": "<2.0.0"
+    }, {
       "matchPackageNames": ["flake8"],
       "allowedVersions": "<6.1.0"
     }
