--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,8 @@ deps =
 description = Apply coding style standards to code
 commands =
     poetry install --only format
-    poetry run isort {[vars]all_path}
     poetry run black {[vars]all_path}
+    poetry run ruff --fix {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
@@ -47,7 +47,7 @@ commands =
       --skip {[vars]test_ha_charm_libs} --skip {[vars]test_rel_charm_libs}
     poetry run codespell {[vars]lib_path
     # pflake8 wrapper supports config from pyproject.toml
-    poetry run pflake8 {[vars]all_path}
+    poetry run ruff {[vars]all_path}
     poetry run isort --check-only --diff {[vars]all_path}
     poetry run black --check --diff {[vars]all_path}
 
