--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,18 +31,12 @@ optional = true
 
 [tool.poetry.group.format.dependencies]
 black = "23.7.0"
-isort = "5.12.0"
+ruff = "0.0.284"
 
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
-flake8 = "6.0.0"
-flake8-docstrings = "1.7.0"
-flake8-copyright = "0.2.4"
-flake8-builtins = "2.1.0"
-pyproject-flake8 = "6.0.0.post1"
-pep8-naming = "^0.13.3"
 codespell = "2.2.5"
 
 [tool.poetry.group.unit]
@@ -50,7 +44,7 @@ optional = true
 
 [tool.poetry.group.unit.dependencies]
 coverage = {extras = ["toml"], version = "7.2.7"}
-pydantic= "1.10.12"
+pydantic = "1.10.12"
 pytest = "7.4.0"
 pytest-asyncio = "0.21.1"
 psycopg2 = {version = "2.9.7", extras = ["binary"]}
@@ -104,19 +98,39 @@ target-version = ["py38"]
 profile = "black"
 
 # Linting tools configuration
-[tool.flake8]
-max-line-length = 99
-max-doc-length = 99
-max-complexity = 10
-exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
-select = ["E", "W", "F", "C", "N", "R", "D", "H"]
-# Ignore W503, E501 because using black creates errors with this
+[tool.ruff]
+line-length = 99
+select = ["E", "W", "F", "C", "N", "D", "I001"]
+extend-ignore = [
+    "D203",
+    "D204",
+    "D213",
+    "D215",
+    "D400",
+    "D404",
+    "D406",
+    "D407",
+    "D408",
+    "D409",
+    "D413",
+]
+# Ignore E501 because using black creates errors with this
 # Ignore D107 Missing docstring in __init__
-ignore = ["W503", "E501", "D107"]
-# D100, D101, D102, D103: Ignore missing docstrings in tests
-per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
-docstring-convention = "google"
+ignore = ["E501", "D107"]
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["D100", "D101", "D102", "D103", "D104"]
+
+[tool.ruff.flake8-copyright]
 # Check for properly formatted copyright header in each file
-copyright-check = "True"
-copyright-author = "Canonical Ltd."
-copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
+author = "Canonical Ltd."
+notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
+
+[tool.ruff.mccabe]
+max-complexity = 10
+
+[tool.ruff.pydocstyle]
+convention = "google"
+
+[tool.ruff.isort]
+order-by-type = true
