--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,7 @@ on:
       - poetry.lock
       - pyproject.toml
       - '.github/**.md'
+      - '.github/workflows/ci.yaml'
 
 jobs:
   ci-tests:
