Single charm deps

--- a/tests/integration/postgresql-test-app/metadata.yaml
+++ b/tests/integration/postgresql-test-app/metadata.yaml
@@ -21,5 +21,5 @@ requires:
     interface: postgresql_client
 
 peers:
-  application-peers:
+  postgresql-test-peers:
     interface: postgresql-test-peers
