Update to PGB test changes

--- a/tests/integration/postgresql-test-app/metadata.yaml
+++ b/tests/integration/postgresql-test-app/metadata.yaml
@@ -19,6 +19,10 @@ requires:
     limit: 2
   no-database:
     interface: postgresql_client
+  db:
+    interface: pgsql
+    limit: 1
+    optional: true
 
 peers:
   postgresql-test-peers:
