--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ pass_env =
     CHARM_BUILD_DIR
     MODEL_SETTINGS
     PYTEST_SKIP_DEPLOY
+    LIBJUJU
 deps =
     poetry
 
@@ -51,7 +52,7 @@ commands =
     poetry run black --check --diff {[vars]all_path}
 
 
-[testenv:unit]
+[testenv:unit-{juju2, juju3}]
 description = Run unit tests
 commands =
     poetry install --with unit
