[DPE-2298] Relational secrets (#263)
* Reduced pipeline

* Relation Secrets in Postgres Charm

* Juju3 secrets actually used in tests

* Adding pytest-mock

* Waiting longer for 2nd DB

* Modifications on Integration Tests

* Unittests to be adjusted

* postgres-test-app local, so we can inject in new data_platform_libs

* DP-libs new version

* Tests changes for DP-libs new version

* postgresql-test-app on new DP-libs

* Latest poetry.lock

* Abort on fail, let's see failures sooner

* Extending timeouts

* Enable tests

* Remove embeded test app

* VM unit tests

* Tweak version mock

* Multiversion unit tests

* Pytest mock shouldn't be installed for integrations

* Revert unit count

* Tweak secrets check

* Restore secrets switch

* Always check for secret uri

* Assert secret in juju 3 new interface test

---------

Co-authored-by: Judit Novak <judit.novak@canonical.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ optional = true
 coverage = {extras = ["toml"], version = "7.3.1"}
 pydantic = "1.10.12"
 pytest = "7.4.2"
+pytest-mock = "3.11.1"
 pytest-asyncio = "0.21.1"
 psycopg2 = {version = "2.9.7", extras = ["binary"]}
 
