--- a/config.yaml
+++ b/config.yaml
@@ -37,6 +37,6 @@ options:
   profile-limit-memory:
     type: int
     description: |
-      Amount of memory in Megabytes to limit MySQL and associated process to.
+      Amount of memory in Megabytes to limit PostgreSQL and associated process to.
       If unset, this will be decided according to the default memory limit in the selected profile.
       Only comes into effect when the `production` profile is selected.
