Reenable indico test for 3.1

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,7 +103,7 @@ jobs:
       - name: Set channel
         run: |
           juju_channel=$(echo "${{ matrix.agent-versions }}" | cut -c 1-3)
-          echo "channel=${juju_channel}/edge" >> "$GITHUB_ENV"
+          echo "channel=${juju_channel}/stable" >> "$GITHUB_ENV"
           juju_major=$(echo "${{ matrix.agent-versions }}" | cut -c 1)
           echo "libjuju=juju${juju_major}" >> "$GITHUB_ENV"
       - name: Setup operator environment
