DPE-2656 Profile limite memory config support (#283)
* first pass

* the mandatory libpatch bump

* fix bad c-c c-v

* prettier assignment

* exporting requirements without hashes

* revert pydantic bump

--- a/config.yaml
+++ b/config.yaml
@@ -34,3 +34,9 @@ options:
       minimal running performance.
    type: string
    default: production
+  profile-limit-memory:
+    type: int
+    description: |
+      Amount of memory in Megabytes to limit PostgreSQL and associated process to.
+      If unset, this will be decided according to the default memory limit in the selected profile.
+      Only comes into effect when the `production` profile is selected.
