--- a/tox.ini
+++ b/tox.ini
@@ -188,5 +188,5 @@ commands =
 [testenv:poetry-lock]
 description = Install, lock and export poetry dependencies
 commands =
-    poetry lock
-    poetry export -f requirements.txt -o requirements.txt
+    poetry lock --no-update
+    poetry export -f requirements.txt -o requirements.txt --without-hashes
