Add test for upgrade from stable

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,7 +86,7 @@ jobs:
           - password-rotation-integration
           - plugins-integration
           - tls-integration
-          - upgrade-integration
+          - upgrade-from-stable-integration
         agent-versions:
           - "2.9.45"  # renovate: latest juju 2
           - "3.1.5"  # renovate: latest juju 3
