--- a/tox.ini
+++ b/tox.ini
@@ -174,8 +174,8 @@ commands =
     pip install juju=={env:LIBJUJU}
     poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/test_tls.py
 
-[testenv:upgrade-integration-{juju2, juju3}]
-description = Run upgrade integration tests
+[testenv:upgrade-from-stable-integration-{juju2, juju3}]
+description = Run upgrade from stable integration tests
 pass_env =
     {[testenv]pass_env}
     CI
@@ -183,7 +183,7 @@ pass_env =
 commands =
     poetry install --with integration
     pip install juju=={env:LIBJUJU}
-    poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/test_upgrade.py
+    poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/ha_tests/test_upgrade_from_stable.py
 
 [testenv:integration-{juju2, juju3}]
 description = Run all integration tests
