[DPE-2289] [DPE-2388] Upgrade from 14/stable and add integration tests (#210)
* Added initial upgrade implementation

* Minor fixes

* Adjusted code to correctly update the upgrade stack and speed up the unit initialisation

* Minor fixes

* Updated the code with the new library

* Fixed upgrade logic to switchover to unit zero and added unit tests

* Added backup creation check

* Rollback dependencies

* Fixed dependencies

* Minor fixes

* Final fixes

* Removed upgrade integration tests

* Pin charmcraft revision

* Remove charmcraft pin

* Removed hashes from requirements

* Revert "Removed upgrade integration tests"

This reverts commit c249b4454abd49de4c7ca91ea13a0b4b1adac6f6.

* Renamed overriden method

* Upgraded test

* Added replication health check and rock dependency

* Comment test

* Add additional upgrade logic for stable revision

* Fix partially the upgrade from stable

* Fix exporter startup

* Fix metrics service start

* Revert tests

* Format

* Lint

* Add test for upgrade from stable

* Add upgrade test

* Minor fixes

* Fix unit tests

* Fix unit tests patches

* PR feedback

--- a/tox.ini
+++ b/tox.ini
@@ -174,6 +174,28 @@ commands =
     pip install juju=={env:LIBJUJU}
     poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/test_tls.py
 
+[testenv:upgrade-integration-{juju2, juju3}]
+description = Run upgrade integration tests
+pass_env =
+    {[testenv]pass_env}
+    CI
+    CI_PACKED_CHARMS
+commands =
+    poetry install --with integration
+    pip install juju=={env:LIBJUJU}
+    poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/ha_tests/test_upgrade.py
+
+[testenv:upgrade-from-stable-integration-{juju2, juju3}]
+description = Run upgrade from stable integration tests
+pass_env =
+    {[testenv]pass_env}
+    CI
+    CI_PACKED_CHARMS
+commands =
+    poetry install --with integration
+    pip install juju=={env:LIBJUJU}
+    poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/ha_tests/test_upgrade_from_stable.py
+
 [testenv:integration-{juju2, juju3}]
 description = Run all integration tests
 pass_env =
